UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Supply_Issue__c.object
<CustomObject>
    <fields>
        <fullName>COLO_Adjusted__c</fullName>
        <inlineHelpText>COLO Adjusted for Margin Threshold</inlineHelpText>
        <label>Adjusted COLO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity_Constraint__c</fullName>
        <label>Capacity Constraint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Well_Date__c</fullName>
        <label>Get Well Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mitigation_Plan_s__c</fullName>
        <label>Mitigation Plan(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Did_Not_Bid_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipName>Did_Not_Bid_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCM_Rejection_Reasons__c</fullName>
        <label>SCM Rejection Reasons</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Month__c</fullName>
        <label>Selected Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Product_Type__c</fullName>
        <label>Selected Product Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPT_Percent__c</fullName>
        <label>TPT (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TPT__c</fullName>
        <label>TPT ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Supply Issue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Supply Issue-{000000}</displayFormat>
        <label>Supply Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>